[package]
name = "vulma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
