[package]
name = "vulma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "vulma"
path = "src/main.rs"

[[bin]]
name = "mock-server"
path = "src/mock-server/main.rs"
